<resources>
    <string name="app_name">Hammonia Taxi</string>
    <string name="forgotpasswordtext">Please, enter your email address. You will
       <br /> receive a link to create a new password via <br /> email. </string>
    <string name="api_key" translatable="false">AIzaSyDHzbqstWXpYy7ce4IN-J-2YYKBxKrE2dk</string>
    <string name="googlekey_other" translatable="false">AIzaSyDHzbqstWXpYy7ce4IN-J-2YYKBxKrE2dk</string>
    <string name="dialog">Dialog</string>
    <string name="please_select_the_reason_for_cancellation">Please select the reason<br /> for cancellation:</string>
    <string name="tipping_is_we">Tipping is welcome, but not required.<br /> The amount is always up to you.</string>
    <string name="finish_trip"><u>Finish Trip</u></string>
    <string name="locgout"><u>Logout</u></string>
    <string name="kate_used_2_rides_with_30_discount_from_rakuten">take used 2 rides with 30% discount<br /> from Rakuten</string>
    <string name="faq_s">FAQ’s</string>
    <string name="tell_more">Tell more</string>
    <string name="i_left_an_item">I left an item</string>
    <string name="if_you_ve_lost_an_item_you_will_need_to_send_us_an_message_immediately_please_remembering_to_provide_us_with_as_many_details_as_possible_about_your_lost_item_and_the_ride_you_took_if_we_find_it_we_ll_connect_you_with_the_driver_directly_to_get_it_back">If you\'ve lost an item you will need to send us an message immediately, please remembering to provide us with as many details as possible about your lost item and the ride you took. If we find it we’ll connect you with the driver directly to get it back.</string>
    <string name="purchase">Purchase</string>
    <string name="check_conn">Check your internet connection</string>
    <string name="destination">Destination</string>
    <string name="sel_destination">Select Destination Address</string>
    <string name="sorry_your_order_has_been_cancelled_by_the_driver_please_book_again">Sorry, your order has been<br /> cancelled by the driver.<br /> Please book again</string>
    <string name="are_you_sure_you_want_to_cancel_this_order">Are you sure you want to cancel this order?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="payment_info">Payment Info</string>
    <string name="msg_noInternet">Internet Connection Not Available</string>
    <string name="on_error">On error</string>
    <string name="please_wait">Please wait...</string>
    <string name="enter_email">Please enter email.</string>
    <string name="enter_mobile">Please enter mobile number.</string>
    <string name="enter_valid_email">Please enter valid email.</string>
    <string name="please_enter_pass">Please enter password.</string>
    <string name="enter_name">Please enter name.</string>
    <string name="we_sent_4_digit_code_to_your_phone">We sent 4 digit code to your phone</string>
    <string name="please_enter_com_otp">Please Enter Otp.</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="please_check_email">Please check mail</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="next">Next</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="profile">Profile</string>
    <string name="ride_history">Ride History</string>
    <string name="payment">Payment</string>
    <string name="my_wallet">My Wallet</string>
    <string name="promocode">Promo code</string>
    <string name="support">Support</string>
    <string name="sign_out">Logout</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="msg">Message</string>
    <string name="recent">Recent</string>
    <string name="estimated_trip_time">Estimated Trip Time</string>
    <string name="estimated_trip_distance">Estimated Trip Distance</string>
    <string name="trip_distance">Trip Distance</string>
    <string name="book_ride">Book Ride</string>
    <string name="session_expire">Your session has expired, Login Again!</string>
    <string name="for_receiving_driver_messages">For receiving driver messages</string>
    <string name="delete_account">delete account</string>
    <string name="newnotificationfromadmin">Notification from admin</string>
    <string name="total_fare">Total fare</string>
    <string name="trip_date">Trip date</string>
    <string name="discount_applied">Discount applied</string>
    <string name="payment_type">Payment Type</string>
    <string name="details">Details</string>
    <string name="base_fare">base fare</string>
    <string name="distance">Distance</string>
    <string name="total_amount">Total Amount</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="select_location">Select Location</string>
    <string name="select_loc">Select Location</string>
    <string name="done">Done</string>
    <string name="type_a_message">Type a message</string>
    <string name="please_write_a_message">Please write a message</string>
    <string name="home">Home</string>
    <string name="channel_name">hammonia</string>
    <string name="channel_description">hammonia_taxi</string>
    <string name="default_notification_channel_id">1234</string>
</resources>