<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/bg_color"
        tools:context=".ForgotPasswordActivity"
        >
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_back_black"
            android:layout_margin="@dimen/_15sdp"
            />
        <LinearLayout
            android:layout_below="@id/ivBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp"
            >
            <ImageView
                android:layout_width="@dimen/_170sdp"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/ic_logo"
                android:layout_marginTop="@dimen/_20sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_30sdp"
                android:textColor="@color/black"
                android:text="@string/forgot_password"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="@dimen/_10sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/metropolis_light"
                android:text="@string/forgotpasswordtext"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/labelPass"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:boxStrokeWidth="0dp"
                    android:background="@null"
                    app:hintTextColor="@color/gray"
                    app:boxStrokeWidthFocused="0dp"
                    >
                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/_12sdp"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:visibility="gone"
                    />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_circular_bg"
                android:layout_marginTop="@dimen/_25sdp"
                android:textAllCaps="false"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerVertical="true"
                android:text="@string/send"
                />
        </LinearLayout>
        <ImageView
            android:id="@+id/bottom_white_line"
            android:layout_width="120dp"
            android:layout_height="5dp"
            android:background="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_5sdp"
            />
    </RelativeLayout>
</layout>