<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NumberActivity"
    android:padding="@dimen/_20sdp"
    android:background="@color/bg_color"
    >
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:background="@drawable/ic_back_black"
        />

    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="@dimen/_10sdp"
        app:tint="@color/purple_200" />

    <TextView
        android:id="@+id/tvNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/black"
        android:text="@string/please_enter_your_mobile_number"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_below="@id/ivBack"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_below="@+id/tvNum"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:orientation="horizontal"
            >


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:backgroundTint="@color/white"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:boxStrokeWidth="0dp"
                app:prefixText="+49"
                android:background="@null"
                app:hintTextColor="@color/gray"
                app:boxStrokeWidthFocused="0dp"
                >
                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:imeOptions="actionDone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_marginRight="@dimen/_15sdp"
            />
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red_circular_bg"
        android:textAllCaps="false"
        android:padding="@dimen/_10sdp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/white"
        android:layout_centerVertical="true"
        android:text="@string/next"
        android:layout_alignParentBottom="true"

        />

</RelativeLayout>
</layout>