<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:id="@+id/layoutUserDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    >

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/userImg"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:src="@drawable/user_ic"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_alignParentStart="true"
                        />

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="@dimen/_15sdp"
                        android:layout_below="@+id/userImg"
                        android:text="Neil Woods"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_marginTop="5dp"
                        android:layout_alignParentStart="true"
                        android:textColor="@color/white"
                       />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="@dimen/_13sdp"
                        android:layout_below="@+id/tvUsername"
                        android:text="neil@gmail.com"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="-8dp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:layout_alignParentStart="true"

                        android:textColor="@color/white"
                        android:layout_centerHorizontal="true"/>




                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/btnProfile"
                    android:layout_below="@+id/layoutUserDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_35sdp"
                    >
                    <TextView
                        android:id="@+id/profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_7sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/profile"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textAllCaps="true"/>


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/btnHistory"
                    android:layout_below="@+id/btnProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"

                    >
                    <TextView
                        android:id="@+id/home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_7sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/ride_history"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textAllCaps="true"/>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnPayment"
                    android:layout_below="@+id/btnHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"

                    >
                    <TextView
                        android:id="@+id/payment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_7sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/payment"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textAllCaps="true"/>


                </RelativeLayout>
                <RelativeLayout
                    android:layout_below="@+id/btnPayment"
                    android:id="@+id/btnWallet"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_7sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/my_wallet"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textAllCaps="true"/>


                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/btnPromocode"
                    android:layout_below="@+id/btnWallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    >
                    <TextView
                        android:id="@+id/promocode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_7sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/promocode"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textAllCaps="true"/>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnSupport"
                    android:layout_below="@+id/btnPromocode"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"

                    >
                    <TextView
                        android:id="@+id/support"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_7sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/support"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        android:textAllCaps="true"/>


                </RelativeLayout>



                <RelativeLayout
                    android:id="@+id/btnSignout"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:layout_below="@+id/btnSupport"

                    >
                    <TextView
                        android:id="@+id/signout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_7sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/sign_out"
                        android:textColor="@color/btn_green_color"
                        android:textSize="@dimen/_14sdp"
                        android:textAllCaps="false"/>

                    <View
                        android:layout_below="@+id/signout"
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="1dp"
                        android:background="@color/blue"
                        android:layout_marginStart="@dimen/_13sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:layout_marginTop="-5dp"/>


                </RelativeLayout>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>