<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bg_color"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/black"
            android:textSize="15dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/light_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:orientation="horizontal"
                >
                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    app:ccp_textSize="12dp"
                    app:ccp_countryPreference="NO"
                    app:ccp_defaultPhoneCode="47"
                    android:layout_height="@dimen/_40sdp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_edit_text"
                    android:layout_width="0dp"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:layout_weight="0.7"
                    app:boxStrokeWidth="0dp"
                    android:background="@null"
                    app:hintTextColor="@color/gray"
                    app:boxStrokeWidthFocused="0dp"
                    >
                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:layout_marginRight="@dimen/_15sdp"
                />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_circular_bg"
            android:layout_marginTop="@dimen/_30sdp"
            android:textAllCaps="false"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:layout_centerVertical="true"
            android:text="@string/submit"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>